Bug 1577711 - Part 1: Revert calling SetDocument earlier during clone from 1568055, r=smaug

This change was causing issues with images not displaying and iframes not
displaying correctly after multiple print preview calls.

Differential Revision: https://phabricator.services.mozilla.com/D44585

--HG--
extra : moz-landing-system : lando