layout/printing/nsPrintObject.cpp
@@ -102,11 +102,10 @@ nsresult nsPrintObject::InitAsRootObject(nsIDocShell* aDocShell, Document* aDoc,
   mDocument = aDoc->CreateStaticClone(mDocShell);
   NS_ENSURE_STATE(mDocument);
 
-#ifdef DEBUG
   nsCOMPtr<nsIContentViewer> viewer;
   mDocShell->GetContentViewer(getter_AddRefs(viewer));
-  MOZ_ASSERT(viewer && viewer->GetDocument() == mDocument);
-#endif
+  NS_ENSURE_STATE(viewer);
+  viewer->SetDocument(mDocument);
 
   return NS_OK;
 }
